--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<title></title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 	<button type="button"> Hello </button>
+	<script src="script.js"></script>
 </body>
 
 </html>
