Updated index.html file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<button type="button"> Hello </button>
-	<script src="script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
