--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-  <button type="button">hello</button>
+  <header class="header">
+    <a href="#" class="logo">Portfolio</a>
+    <nav class="navbar">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Skills</a>
+      <a href="#">Portfolio</a>
+      <a href="#"> Contact</a>
+
+    </nav>
+
+  </header>
 </body>
 
 </html>
